--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Oswald:wght@200;600&display=swap");
+@import url("https://https://sv1.picz.in.th/images/2023/04/08/mlmb49.jpg");
 body {
   font-family: "Oswald", sans-serif;
   background-color: #212121;
@@ -75,13 +75,13 @@ body section .row {
   background: rgba(0, 0, 0, 0.4);
 }
 .card .cover.item-a {
-  background-image: url("https://sv1.picz.in.th/images/2023/04/08/mjZeuI.jpg");
+  background-image: url("https://sv1.picz.in.th/images/2023/04/08/mlmb49.jpg");
 }
 .card .cover.item-b {
-  background-image: url("https://sv1.picz.in.th/images/2023/04/08/mjwahE.jpg");
+  background-image: url("https://sv1.picz.in.th/images/2023/04/08/mlygB0.jpg");
 }
 .card .cover.item-c {
-  background-image: url("https://images.unsplash.com/photo-1525945518069-b924046d1385?auto=format&fit=crop&w=600&q=80");
+  background-image: url("https://sv1.picz.in.th/images/2023/04/08/mlyMfR.jpg");
 }
 .card .cover h1 {
   font-weight: 600;
